# vgi-fixedwidth

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  run_tests.sh
.github/workflows/: ci.yml  release.yml
ci/: check-version.sh
crates/fixedformat-core/: Cargo.toml
crates/fixedformat-core/src/: compression.rs  copybook.rs  decode.rs  describe.rs  ebcdic.rs  encode.rs  framing.rs  jsonspec.rs  layout.rs  lib.rs  multirecord.rs  packed.rs  stream.rs  template.rs  value.rs  zoned.rs
crates/fixedformat-core/tests/: roundtrip.rs
crates/fixedformat-worker/: Cargo.toml
crates/fixedformat-worker/src/: arrow_map.rs  cloud.rs  copy_from.rs  copy_to.rs  main.rs  meta.rs  options.rs  reader.rs  value_in.rs
crates/fixedformat-worker/src/buffering/: mod.rs  write_fixed.rs  write_multi.rs
crates/fixedformat-worker/src/scalar/: mod.rs  pack.rs  unpack.rs  unpack_multi.rs  version.rs
crates/fixedformat-worker/src/table/: describe_fixed.rs  mod.rs  read_fixed.rs  read_multi.rs
data/: generate_fixtures.py
test/sql/: basic.test  codes.test  copy_from.test  copybook.test  datetime.test  describe.test  errors.test  files.test  malformed.test  multirecord.test  nulls.test  s3_roundtrip.test  scalar_encoding.test  types.test  unpack_multi.test  write_multi.test
