[workspace]
resolver = "2"
members = ["crates/fixedformat-core", "crates/fixedformat-worker"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
license = "MIT"
authors = ["Query Farm LLC <hello@query.farm>"]

[workspace.dependencies]
# VGI Rust SDK (worker side), published on crates.io. Pulls in vgi-rpc 0.2 and
# arrow 58 transitively; keep arrow/vgi-rpc here in lockstep with vgi's pins so a
# single arrow/vgi-rpc resolves.
vgi = "0.5.0"
vgi-rpc = { version = "0.2.0", default-features = false, features = ["macros", "http"] }
arrow = { version = "58", default-features = false, features = ["ipc"] }
arrow-array = "58"
arrow-buffer = "58"
arrow-data = "58"
arrow-schema = "58"
arrow-select = "58"
arrow-cast = "58"

fixedformat-core = { path = "crates/fixedformat-core" }

[profile.release]
opt-level = 2
