[workspace]
resolver = "2"
members = ["crates/fixedformat-core", "crates/fixedformat-worker"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "MIT"
authors = ["Query Farm LLC <hello@query.farm>"]

[workspace.dependencies]
# VGI Rust SDK (worker side). Pinned to the LOCAL checkout because it carries the
# table-buffering two-phase secret-bind fix that write_fixed needs for cloud
# writes and which is not yet on crates.io. ROLLOUT: repin to a published vgi
# version (>= the one containing that fix) before releasing this worker.
# Keep arrow/vgi-rpc in lockstep with vgi's pins so a single arrow/vgi-rpc resolves.
vgi = { path = "/Users/rusty/Development/vgi-rust/vgi" }
vgi-rpc = { version = "0.7.0", default-features = false, features = ["macros", "http"] }
arrow = { version = "59", default-features = false, features = ["ipc"] }
arrow-array = "59"
arrow-buffer = "59"
arrow-data = "59"
arrow-schema = "59"
arrow-select = "59"
arrow-cast = "59"

fixedformat-core = { path = "crates/fixedformat-core" }

[profile.release]
opt-level = 2
