[package]
name = "fixedformat-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Pure-compute fixed-width / Perl-unpack / COBOL-copybook codecs for the fixedformat VGI worker (no Arrow/VGI deps)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1"

[lints.rust]
unsafe_code = "forbid"
