[package]
name = "fixedformat-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "VGI worker exposing fixed-width / Perl-unpack / COBOL-copybook pack & unpack functions to DuckDB over Apache Arrow"

[[bin]]
name = "fixedformat-worker"
path = "src/main.rs"

[dependencies]
vgi.workspace = true
vgi-rpc.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
arrow-select.workspace = true
arrow-cast.workspace = true
fixedformat-core.workspace = true
log = "0.4"
env_logger = "0.11"
glob = "0.3"
