[package]
name = "fixedformat-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "VGI worker exposing fixed-width / Perl-unpack / COBOL-copybook pack & unpack functions to DuckDB over Apache Arrow"

[[bin]]
name = "fixedformat-worker"
path = "src/main.rs"

[dependencies]
vgi.workspace = true
vgi-rpc.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
arrow-select.workspace = true
arrow-cast.workspace = true
fixedformat-core.workspace = true
log = "0.4"
env_logger = "0.11"
glob = "0.3"
# Cloud object-store access for s3:// and http(s):// paths. `object_store` is
# arrow-independent, so it does not disturb the arrow-59 pin. tokio drives the
# async object_store calls from the synchronous worker (see src/cloud.rs).
object_store = { version = "0.12", features = ["aws", "http"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
url = "2"
futures = "0.3"
percent-encoding = "2"
